--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "mathjs": "^11.11.1"
   }
 }
