--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "@types/mathjs": "^9.4.2",
+    "mathjs": "^12.1.0"
   }
 }
