--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "css-loader": "^6.7.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.1.2",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.1.2",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
@@ -37,5 +37,8 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "mathjs": "^12.1.0"
   }
 }
