--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "dev": " NODE_ENV=dev webpack-dev-server --progress=profile --color --port 8081",
+    "dev": "SET NODE_ENV=dev & webpack-dev-server --progress=profile --color --port 8081",
     "prod": "NODE_ENV=prod webpack --config webpack.production.config.js"
   },
   "repository": {
@@ -28,6 +28,8 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "jsdom-global": "^3.0.2",
+    "mathjs": "^12.0.0",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
