--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,12 @@
 /out-tsc
 /storybook-static
 /docs
-/tests/kendo-themes/tests/visual/styles
+/tests/kendo-themes/tests/visual/s2tyles
 
 # dependencies
 /node_modules
+
+/package-lock.json
 
 # IDEs and editors
 /.idea
