--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "dev": " NODE_ENV=dev webpack-dev-server --progress=profile --color --port 8081",
-    "prod": "NODE_ENV=prod webpack --config webpack.production.config.js"
+    "dev": "cross-env NODE_ENV=dev webpack-dev-server --progress=profile --color --port 8081",
+    "prod": "cross-env NODE_ENV=prod webpack --config webpack.production.config.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
+    "cross-env": "^7.0.3",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "url-loader": "^4.1.1",
@@ -41,6 +42,6 @@
   },
   "dependencies": {
     "hoist-non-react-statics": "^3.3.2",
-    "typescript": "^2.4.1"
+    "mathjs": "^14.0.1"
   }
 }
