--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "target": "es5",
     "sourceMap": true,
-    "typeRoots": ["node_modules/@types", "custom-types"]
+    "typeRoots": ["node_modules/@types", "custom-types"],
   },
   "exclude": [
     "node_modules"
