--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
     "@types/hoist-non-react-statics": "^3.3.5",
-    "@types/jest": "^29.1.2",
+    "@types/jest": "^29.5.14",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.1.2",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.1.2",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
-    "ts-jest": "^29.0.3",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.4.1",
+    "typescript": "^5.7.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
@@ -41,6 +42,6 @@
   },
   "dependencies": {
     "hoist-non-react-statics": "^3.3.2",
-    "typescript": "^2.4.1"
+    "mathjs": "^14.0.1"
   }
 }
