--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "hoist-non-react-statics": "^3.3.2",
-    "typescript": "^2.4.1"
+    "mathjs": "^14.3.1",
+    "typescript": "^5.8.2"
   }
 }
