--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "dev": " NODE_ENV=dev webpack-dev-server --progress=profile --color --port 8081",
-    "prod": "NODE_ENV=prod webpack --config webpack.production.config.js"
+    "dev": "cross-env NODE_ENV=dev webpack-dev-server --progress=profile --color --port 8081",
+    "prod": "cross-env NODE_ENV=prod webpack --config webpack.production.config.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,9 @@
     "@babel/preset-env": "^7.19.3",
     "@types/hoist-non-react-statics": "^3.3.5",
     "@types/jest": "^29.1.2",
+    "@types/mathjs": "^9.4.1",
     "babel-loader": "^8.2.5",
+    "cross-env": "^10.0.0",
     "css-loader": "^6.7.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -34,13 +36,14 @@
     "style-loader": "^3.3.1",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
+    "typescript": "^5.9.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.15.2"
   },
   "dependencies": {
     "hoist-non-react-statics": "^3.3.2",
-    "typescript": "^2.4.1"
+    "mathjs": "^14.7.0"
   }
 }
