--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "dev": " NODE_ENV=dev webpack-dev-server --progress=profile --color --port 8081",
+    "dev": "cross-env NODE_ENV=dev webpack-dev-server --progress=profile --color --port 8081",
     "prod": "NODE_ENV=prod webpack --config webpack.production.config.js"
   },
   "repository": {
@@ -24,20 +24,21 @@
     "@types/hoist-non-react-statics": "^3.3.6",
     "@types/jest": "^29.5.14",
     "babel-loader": "^8.2.5",
+    "cross-env": "^10.1.0",
     "css-loader": "^6.7.1",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.1.2",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.1.0",
+    "sass": "^1.97.0",
+    "sass-loader": "^16.0.6",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.2.6",
     "ts-loader": "^9.4.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack": "^5.104.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
     "hoist-non-react-statics": "^3.3.2",
