--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,18 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# Dependencies
+node_modules/
 
-# compiled output
-/dist
-/app/css
-/gzipped
-/tmp
-/out-tsc
-/storybook-static
-/docs
-/tests/kendo-themes/tests/visual/styles
+# Testing
+coverage/
 
-# dependencies
-/node_modules
+# Build
+dist/
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-
-# misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-/.favorites.json
-
-# System Files
-.DS_Store
-Thumbs.db
-
-lintreport.json
-report.*.json
-/.vs
-report.*.json
-
-# Local configuration
-/apps/portal-web/src/assets/env/local/*
-/apps/thirdparty-web/src/assets/env/local/*
+# Logs
 *.log
 
-# Versioning file
-version.ts
-/.scannerwork/
+# IDE
+.idea/
+.vscode/
 
-# YARN v2
-.yarn/*
-!.yarn/patches
-!.yarn/releases
-!.yarn/plugins
-!.yarn/sdks
-!.yarn/versions
-.pnp.*
+# OS
+.DS_Store
