--- a/package.json
+++ b/package.json
@@ -1,47 +1,67 @@
 {
   "name": "stt-pz-4",
   "version": "1.0.0",
-  "description": "In this lesson is next step to understand BDD testing in javascript. Using Jest",
+  "description": "BDD testing with Jest - Calculator",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll",
-    "dev": " NODE_ENV=dev webpack-dev-server --progress=profile --color --port 8081",
-    "prod": "NODE_ENV=prod webpack --config webpack.production.config.js"
+    "test": "jest --coverage",
+    "test:watch": "jest --watchAll",
+    "dev": "webpack-dev-server --progress=profile --color --port 8081",
+    "prod": "webpack --config webpack.production.config.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/STT-VITI-22/stt-pz-4.git"
-  },
-  "author": "Andrii Zadvornyi",
+  "author": "DOMASHOV D.V.",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/STT-VITI-22/stt-pz-4/issues"
-  },
-  "homepage": "https://github.com/STT-VITI-22/stt-pz-4#readme",
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
-    "@types/hoist-non-react-statics": "^3.3.6",
     "@types/jest": "^29.5.14",
     "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
-    "html-loader": "^5.1.0",
-    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.1.2",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.1.0",
-    "style-loader": "^4.0.0",
     "ts-jest": "^29.2.6",
     "ts-loader": "^9.4.1",
-    "url-loader": "^4.1.1",
+    "typescript": "^5.8.2",
     "webpack": "^5.98.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
   },
-  "dependencies": {
-    "hoist-non-react-statics": "^3.3.2",
-    "mathjs": "^14.3.1",
-    "typescript": "^5.8.2"
-  }
+  "jest": {
+  "preset": "ts-jest",
+  "testEnvironment": "jsdom",
+  "roots": [
+    "<rootDir>"
+  ],
+  "testMatch": [
+    "**/__tests__/**/*.+(ts|tsx|js)",
+    "**/?(*.)+(spec|test).+(ts|tsx|js)"
+  ],
+  "transform": {
+    "^.+\\.(ts|tsx)$": "ts-jest"
+  },
+  "coverageDirectory": "coverage",
+  "collectCoverageFrom": [
+    "**/*.{ts,tsx}",
+    "!**/*.spec.{ts,tsx}",
+    "!**/*.test.{ts,tsx}",
+    "!**/node_modules/**",
+    "!**/index.ts/**"
+  ],
+  "coverageThreshold": {
+    "global": {
+      "branches": 90,
+      "functions": 90,
+      "lines": 90,
+      "statements": 90
+    }
+  },
+  "moduleFileExtensions": [
+    "ts",
+    "tsx",
+    "js",
+    "jsx",
+    "json",
+    "node"
+  ],
+  "verbose": true
+}
 }
