--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,19 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
     "module": "commonjs",
-    "target": "es5",
+    "lib": ["ES2020", "DOM"],
+    "outDir": "./dist",
+    "rootDir": "./",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "declaration": true,
     "sourceMap": true,
-    "typeRoots": ["node_modules/@types", "custom-types"]
+    "types": ["jest", "node"]
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["libs/**/*", "src/**/*"],
+  "exclude": ["node_modules", "dist", "coverage"]
 }
