--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@babel/preset-env": "^7.19.3",
     "@types/hoist-non-react-statics": "^3.3.6",
     "@types/jest": "^29.5.14",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-loader": "^5.1.0",
